test_suite5/ALAN/test_suite/alan-2022-examples/failing/007450_mutation.alan
source T begin relax end get K
